Fix responsive design not working on mobile
Was missing the required meta tag. Also increase the trigger width.

--- a/static/styles.css
+++ b/static/styles.css
@@ -111,7 +111,7 @@ footer
   margin-left: 1em;
 }
 
-@media screen and (max-width: 40rem)
+@media screen and (max-width: 48rem)
 {
   .model-select
   {
